[project]
name = "wlts"
description = "."
readme = "README.rst"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Brazil Data Cube Team", email = "bdc.team@inpe.br"},
]
keywords = [
    "lulc"
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License version 3 License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
version="1.2.0"
dependencies = [
    "Click>=7.0",
    "Jinja2>=2.11.1",
    "descartes>=1.1.0",
    "shapely>=1.7.1",
    "pandas>=1.1",
    "geopandas>=0.8.2",
    "plotly==5.5.0",
    "rich>=13.9.2",
    "lccs @ git+https://github.com/brazil-data-cube/lccs.py@v1.0.0",
    "rich>=10.0.0",
    "httpx>=0.19.0",
]

# Extras Dependencies
[project.optional-dependencies]
dev = ["pre-commit"]
docs = [
    "Sphinx>=7.0",
    "sphinx_rtd_theme",
    "sphinx-copybutton",
    "sphinx-tabs",
]
tests = [
    "coverage>=6.4",
    "coveralls>=3.3",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-pep8>=1.0",
    "pydocstyle>=4.0",
    "isort>4.3",
    "check-manifest>=0.40",
]
all = ["wlts[docs,tests]"]
## End extras dependencies

[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wlts*"]
exclude = ["tests*"]
namespaces = false

[tool.setuptools.package-data]
"wlts" = ["py.typed"]

[project.scripts]
wlts-cli = "wlts.cli:cli"
